math2000 - covered green's theorem

--- a/_posts/course-reviews/2023-05-28-math2000.md
+++ b/_posts/course-reviews/2023-05-28-math2000.md
@@ -582,10 +582,72 @@ shifts its focus to integration functions $F: U\subseteq\mathbb{R}^n\to\mathbb{R
 
 If I was to drop any object down any point in the field, you would be able to predict the trajectory of the object from the vector field. At least that's how I thought of it but I am not into analysis and I also didn't exactly do that well in the course. So take my words with a grain of salt.
 
-It is not important at all to know the application of Physics in this course. It's just neat to see how interdisciplinary Mathematics is. Regardless, I purged all my Physics knowledge right after I made the decision to switch into Math so whatever I am saying could be very wrong. The first major concept in vector calculus that was introduced was line integrals or arc length which you could be familiar with if you have taken MATH1004, Calculus for Engineers, if for some odd reason your academic background was in Engineering prior to switching (or trying to switch) into Math. 
-Line integrals allows you to calculate the circumference of a circle.
+It is not important at all to know the application of Physics in this course. It's just neat to see how interdisciplinary Mathematics is. Regardless, I purged all my Physics knowledge right after I made the decision to switch into Math so whatever I am saying could be very wrong. The first major concept in vector calculus that was introduced was arc length which you could be familiar with if you have taken MATH1004, Calculus for Engineers, if for some odd reason your academic background was in Engineering prior to switching (or trying to switch) into Math. Arclength as the name implies allows you to measure the length of a curve such as calculating the circumference of a circle. Calculating arclengths is not difficult at all, just remember the formula and how to parameterize the curve. This topic was interesting because you could apply calculus to determine length of shapes and curves that exist in reality even if there are much more simpler ways to do that.
+
+The next topic is related to arc lengths but for higher dimesnions called line integrals. Before I go into analogies, it might be clear if I showed you the equations  for arc lengths and line integrals so you compare between the two:
+
+> **Archlength:** $\int_C fds = \int_a^b \|g'(t)\|dt$
+
+> **Line Integral (Scalar):** $\int_C fds = \int_a^b f(g(t))\|g'(t)\|dt$
+
+As one can observe, arclength is a special case of a scalar line integral where the arclength of our curve is $\int_C 1ds$ (i.e. the scalar function being integrated is 1). One way to view line integrals of a scalar function is as follows:
+
+$\int_C f ds = (\text{arclength of C}) \times (\text{average of f over C})$
+
+However, this is a non-rigorous and imprecise definition of what it means to compute the line integral of a function. One way to think of line integral is to think about shovelling snow where the heights differ along the path. The amount of snow you shovel is dependent on where you shovel (i.e. depth differs), how far you shovel and etc. It represents an accumulation (i.e. snow) above the path. This is an anology that [Dr. Trefor Bazett](https://youtu.be/WA5_a3C2iqY), a professor in Canada and a youtuber, introduced to give an intuition what line integrals mean. Starling's introduction was a bit confusing at first till someone mentioned it seemed like taking the area of a curtain by computing the height of the curtain as you go along the curtain. One interesting thing about line integrals is that the direction (called orientation) in which you traverse the path does not matter which makes intuitive sense. But what if instead of working with scalar functions, we work on vector functions? Would the direction matter?
+
+As most will say, computing the line integral of a vector field is much more interesting than a scalar function due to its many application in physics. Recall a vector field allows us to know both the direction and magnitude of a particle at any point in the field. Such vectors can be thought of as force or velocity as both properties have a direction and magnitude which we can use to compute the work done as the particle traverses through a path. If you have taken PHYS1001, you will know that work can be defined more than just the product of force and distance:
+
+$$W = Fd = \int_C \vec{F} \cdot d\vec{x} = \int_C (F_1dx_1 + ... + F_n dx_n) = \int_a^b F(g(t))\cdot g'(t)dt \nonumber$$
+
+Unlike line integrals of scalar functions, the orientation (direction) does matter. However the difference between the orientation happens to be the negation of the other. Line integrals could be tricky to compute which is where the next concept, Green's Theorem, comes into play. I didn't realize the relation between line integrals and Green's Theorem until recently. Green's Theorem can be used as a tool to convert a line integral  around a simple closed curve into a double integral over a region enclosed by that curve. Solving a single integral may sound easier than a double integral but that is not always the case. Before I go into anymore details, I probably should introduce what Green Theorem even is:
 
 
+<a name = "green">
+
+> **Green's Theorem:** Let $S \subseteq \mathbb{R}^2$ be a regular region with piecewise C' boundary S. If $\vec{F=(P,Q)}$ is a C' vector field on S then:
+> $\oint_{\partial S} \vec{F}\cdot d\vec{x} = \int\int_S (\frac{\partial Q}{\partial x} - \frac{\partial P}{\partial y}) dA$
+
+All of this Math jargon might be confusing but here's the closest meme I could fine that Starling showed us to understand Green's Theorem (practically the same meme but it was how engineers saw Green's Theorem instead of Physicists) 
+
+![Meme of how Physicsts and Math view Green's Theorem](https://preview.redd.it/rkcmvlqhyco91.jpg?width=640&crop=smart&auto=webp&s=1d6d73d7b412547d7537fd3140ed22c6cdde29ed)
+
+I will attempt to explain Green's Theorem in more detail and in another approach soon but let's take a few steps back. One way to view line integrals over vector fields is to think of the force flowing. For instance, think of water flowing across a smooth surface. A line integral can compute the **flow** of water moving **along** (or tangential to) the curve. If the curve is closed (i.e. path connected and starts & closes at the same point like a loop), then the flow circulates. What Green's Theorem is telling us that we can calculate the total flow of the vector field across the closed curve by seeing what happens inside the loop.
+
+I have skipped a lot of details and you may be confused as to why I started to talk about flow. Hopefully in due time, it'll make sense but I also have poor understanding of material as stated earlier. So hopefully, I haven't said anything too outrageous yet. You may have noticed that I skipped a lot of details in between such as what it means for a path to be independent, what a regular region is or what does it mean for a vector to be conservative. So I'll explain what those are (for myself):
+
+> A vector $\vec{F}$ is conservative if $\vec{F}=\vec{\nabla}f$ for some f
+> 
+> F is conservative $\implies \int_{C_1}\vec{F}\cdot d\vec{x} = \int_{C_2} \vec{F}\cdot d\vec{x}$ where $C_1$ and $C_2$ are two path that start and end at the same points
+
+Do not fret if the definition of conservative is scary. The definition of conservative from Physics remains the same in Math. As a review, a force is conservative if the work done by the force on a particle is independent of the particle's path. Essentially, all that matter is the where the particle that the force is acting on starts and ends (i.e. the end points of our integral). Some conservative fields are gravitational and electrical field. $\vec{F}=\vec{\nabla}f$ is a key property for a vector to be conservative and can be used as a quick test to see if the vector is conservative or not. What we are saying is that if a vector can be expressed by some scalar potential function.
+
+
+Before I can explain what the word `regular region` that appears in the [definition for Green's Theorem](#green) is, we first need to know what it means for a path to be **SIMPLE**. 
+
+> **SIMPLE:** a path C is **SIMPLE** if it has no self-crossings (except possibly at the start and end)
+
+This is best illustrated with a diagram:
+
+![illustration on what constitutes a simple path with a mix of what a simple & closed, simple & not closed, not simple & closed, and not simple & not closed paths look like](../assets/math-physics/handrawn-diagrams/math2000/simple-paths-examples.png)
+
+Now that we know what a simple path is, we can now explain what a regular region is:
+
+> **Regular Region:** a regular region S is said to have piecewise C' boundary on S and can be written as the union of simple paths that only meet at their endpoints
+
+One thing to note is about orientation of the boundary. This is important when working with Green's Theorem as it indicates whether to assign a positive or negative sign to the associated line integral. A positive orientaiton of $\partial S$ is the orientation (i.e. direction) that keeps S to the **left** (CCW) of $\partial S$ (the boundary) as one walks along it. So if we were to traverse the boundary of the region the opposite direction, our resulting line integral is opposite of what it would be if we were to traverse to the left. The thing I cannot wrap my head around till the time of writing is how the direction of the inner boundary is opposite of the outer boundary. Take a donut for instance, the outer boundary is traversed CCW meanwhile the inner boundary (inner-circle) is traversed CW as seen below:
+
+![illustration of how the inner and outer boundary is traversed in the positive orientation. Taken from LibreText](../assets/math-physics/handrawn-diagrams/math2000/donut-orientation.png)
+
+<p class = "caption">Taken from Libre Math. Illustrates how the inner and outer boundary are traversed in opposite direction but has positive orientation</p>
+
+The answer becomes obvious when you split the regions in half: 
+
+![a donut split in half showing the reason why the inner and outer circle is traversed in opposite direction but still has positive orientation](https://math.libretexts.org/@api/deki/files/5062/CNX_Calc_Figure_16_04_015.jpg?revision=1&size=bestfit&width=673&height=345)
+
+Here's another example from Libretext that fully illustrates this:
+
+![an oval with three inner regions to illustrate how the boundaries are traversed](https://math.libretexts.org/@api/deki/files/5057/CNX_Calc_Figure_16_04_014.jpg?revision=1&size=bestfit&width=562&height=260)
 
 ---
 
