Publish math2000 review

--- a/_posts/course-reviews/2023-05-22-math2000.md
+++ b/_posts/course-reviews/2023-05-22-math2000.md
@@ -610,6 +610,8 @@ Unlike line integrals of scalar functions, the orientation (direction) does matt
 
 All of this Math jargon might be confusing but here's the closest meme I could fine that Starling showed us to understand Green's Theorem (practically the same meme but it was how engineers saw Green's Theorem instead of Physicists) 
 
+<a name = "meme"></a>
+
 ![Meme of how Physicsts and Math view Green's Theorem](https://preview.redd.it/rkcmvlqhyco91.jpg?width=640&crop=smart&auto=webp&s=1d6d73d7b412547d7537fd3140ed22c6cdde29ed)
 
 I will attempt to explain Green's Theorem in more detail and in another approach soon but let's take a few steps back. One way to view line integrals over vector fields is to think of the force flowing. For instance, think of water flowing across a smooth surface. A line integral can compute the **flow** of water moving **along** (or tangential to) the curve. If the curve is closed (i.e. path connected and starts & closes at the same point like a loop), then the flow circulates. What Green's Theorem is telling us that we can calculate the total flow of the vector field across the closed curve by seeing what happens inside the loop.
@@ -620,8 +622,7 @@ I have skipped a lot of details and you may be confused as to why I started to t
 > 
 > F is conservative $\implies \int_{C_1}\vec{F}\cdot d\vec{x} = \int_{C_2} \vec{F}\cdot d\vec{x}$ where $C_1$ and $C_2$ are two path that start and end at the same points
 
-Do not fret if the definition of conservative is scary. The definition of conservative from Physics remains the same in Math. As a review, a force is conservative if the work done by the force on a particle is independent of the particle's path. Essentially, all that matter is the where the particle that the force is acting on starts and ends (i.e. the end points of our integral). Some conservative fields are gravitational and electrical field. $\vec{F}=\vec{\nabla}f$ is a key property for a vector to be conservative and can be used as a quick test to see if the vector is conservative or not. What we are saying is that if a vector can be expressed by some scalar potential function.
-
+Do not fret if the definition of conservative is scary. The definition of conservative from Physics remains the same in Math. As a review, a force is conservative if the work done by the force on a particle is independent of the particle's path. Essentially, all that matter is where the particle that the force is acting on starts and ends (i.e. the end points of our integral). Some examples of conservative fields are gravitational and electrical field. $\vec{F}=\vec{\nabla}f$ is a key property for a vector to be conservative and can be used as a quick test to see if the vector is conservative or not. What we are saying is that if a vector can be expressed by some scalar potential function, it is conservative.
 
 Before I can explain what the word `regular region` that appears in the [definition for Green's Theorem](#green) is, we first need to know what it means for a path to be **SIMPLE**. 
 
@@ -633,7 +634,17 @@ This is best illustrated with a diagram:
 
 Now that we know what a simple path is, we can now explain what a regular region is:
 
-> **Regular Region:** a regular region S is said to have piecewise C' boundary on S and can be written as the union of simple paths that only meet at their endpoints
+> **Regular Region:** a regular region $S\subseteq \mathbb{R}^n$ is called a **REGULAR REGION** if it is compact and $S=(\overline{S^\circ})$
+
+As always, examples and illustrations explain a thousand words:
+
+![an example of how a closed ball of radius r is regular](../assets/math-physics/handrawn-diagrams/math2000/regular-1.png)
+
+What is interesting about regular regions is the implication that no information is lost when you take the interior of a region. In other words, all the information you need to recover the closed region is contained in the interior region itself. This has significance I would imagine in information theory in the sense that you can store less information and still recover the original information which we call lossless compression. Though I am no expert in information theory. If this talk about losless compression makes no sense, perhaps it will (hopefully) if you look at the next example:
+
+![an example of a region that is not regular](../assets/math-physics/handrawn-diagrams/math2000/regular-2.png)
+
+The example above is an example of what a non-regular region is. As you can see, the original region contains a line segment sticking out of the compact ball. When we take the interior of this region, we are left with an open ball hence losing information regarding the line segment that was attached to the ball. Taking the closure of the open ball only gives us a closed ball and **not** a closed ball **with a line segment sticking out of the ball**. This is an example of lossy compression where we lost key information (i.e. the line segment). Just to be clear, the talk about lossless and lossy compression isn't a topic taught in the course, it was just my love of computer science making this connection.
 
 One thing to note is about orientation of the boundary. This is important when working with Green's Theorem as it indicates whether to assign a positive or negative sign to the associated line integral. A positive orientaiton of $\partial S$ is the orientation (i.e. direction) that keeps S to the **left** (CCW) of $\partial S$ (the boundary) as one walks along it. So if we were to traverse the boundary of the region the opposite direction, our resulting line integral is opposite of what it would be if we were to traverse to the left. The thing I cannot wrap my head around till the time of writing is how the direction of the inner boundary is opposite of the outer boundary. Take a donut for instance, the outer boundary is traversed CCW meanwhile the inner boundary (inner-circle) is traversed CW as seen below:
 
@@ -648,6 +659,87 @@ The answer becomes obvious when you split the regions in half:
 Here's another example from Libretext that fully illustrates this:
 
 ![an oval with three inner regions to illustrate how the boundaries are traversed](https://math.libretexts.org/@api/deki/files/5057/CNX_Calc_Figure_16_04_014.jpg?revision=1&size=bestfit&width=562&height=260)
+
+The next major topic taught was surface integrals which calculates the amount of flux of a vector field passing through a surface. Those of you who have taken PHYS1002 or PHYS1004 or have a Physics background will know that a flux is the flow of some quantity such electric field lines or fluid mass that flows through a particular region per unit time. There are definitely some parallels with surface and path integrals in the sense that there are integral of scalar functions and also integrals of vector functions on orientable surfaces. But now we are integrating over surface rather than a path so we need to know how to parameterize a surface (i.e. decsribe a surface). In this course, we define a parameterization of the surface as the following:
+
+> Let a parameterization of a surface S in $\mathbb{R}^3$ be $G:U\subseteq \mathbb{R}^2 \to S\subseteq \mathbb{R}^3$
+
+Once we know the parameterization of the surface, we can compute the surface area of S through the following equation:
+
+> **Surface\_Area(S)** $= \int\int_U \|\partial_u \vec{G} \times \partial_v \vec{G}\|dA$
+
+where u and v are independent variables of the parameterization which could be as simple as the variables x and y in cartesian coordinates or $\theta$ and $\varphi$ in spherical or cylindrical coordinates. In this course we say $dS = \|\partial_u \vec{G} \times \partial_v \vec{G}\|dA$. This may cause some confusion as outside literature states $dA = \|\partial_u \vec{G} \times \partial_v \vec{G}\|dudv$. They are equivalent statements but I just wanted to make that note. 
+
+
+Recall that the parameterization is a function that maps to $\mathbb{R}^3$ so taking a cross product between two $\mathbb{R}^3$ requires taking the determinant of a 3x3 matrix based on the following formula:
+
+> **Cross Product using Determinant Formula:** 
+> $$\vec{a}\times {b} = \Biggm\rvert\begin{bmatrix}
+  i & j & k \\
+  a_1 & a_2 & a_3 \\
+  b_1 & b_2 & b_3
+\end{bmatrix} \Biggm\lvert$$
+
+If you are not used to the physics notation of i, j, and k, it's essentially just our standard basis vectors $\vec{e_1}, \vec{e_2}, \vec{e_3}$
+One key thing about taking the norm of a cross product is the ability to factor out common factors that are shared in a single row. This greatly confused me on how it works but I think that'll be another blog post for another time since I'm very far behind my blog release schedule. For instance, we can factor out $R\sin\varphi$ from the 2nd row and $R$ from the third row in the following example:
+
+$$\begin{align}
+\|\partial_\theta \vec{G} \times \partial_\varphi \vec{G}\| 
+&= \Biggm\rvert\Biggm\rvert
+\begin{bmatrix}
+  \vec{e_1} & \vec{e_2} & \vec{e_3} \\
+  -R\sin\varphi\sin\theta & R\sin\varphi\cos\theta & 0 \\
+  R\cos\varphi\cos\theta & R\cos\varphi\sin\theta & -R\sin\varphi
+\end{bmatrix} \Biggm\lvert\Biggm\lvert \nonumber\\
+&= (R\sin\varphi)(R)\Biggm\rvert\Biggm\rvert\begin{bmatrix}
+  \vec{e_1} & \vec{e_2} & \vec{e_3} \\
+  -\sin\theta & \cos\theta & 0 \\
+  \cos\varphi\cos\theta & \cos\varphi\sin\theta & -\sin\varphi
+\end{bmatrix} \Biggm\lvert\Biggm\lvert \nonumber
+\end{align}\nonumber$$
+
+However, the formula for the surface area only suffices when the scalar function we are integrating over is a constant function 1 (i.e. $\int\in S 1dS$). We need to introduce a new generalized equation to integrate scalar functions over surfaces:
+
+> **Integrating Scalar Functions Over Surfaces:** $\int\int_S fdS =\int\int_U f(\vec{G}(u, v))\|\partial_u \vec{G} \times \partial_v \vec{G}\| dA\$
+
+When taking the integral of vector functions over surfaces, we need to talk about the normal vector which again has been seen if you have taken an introduction to electromagnetism in first year. 
+
+> **normal vector:** $\vec{n}$ is a normal unit vector to the surface meaning it has a magnitude of 1 and is perpendicular to the surface
+
+The norm expresses the orientation of the surface. I like to think of the norm as describing the direction of the flux such as water where the norm is negative on the side at which the flux goes into the surface (inward) and positive when the flux leaves the surface (outward). I purged most of my Physics knowledge so I hope I am not saying something false. That's the risk of writing about topics you don't have much knowledge on I guess. Anyhow, for the purpose of this course, you ohave to choose the norm such that the norm is flowing outward which may require you to take the negation of the cross product $\partial_u\vec{G} \times \partial_v\vec{G}$.
+
+> **Integrating a Vector Function Over a Surface:** $\pm \int\int_U (\vec{F}\circ{G}\cdot (\partial_u\vec{G}\times\partial_v\vec{G})dA$
+
+The final significant concept before Stokes Theorem is the discussion on curl and divergence. Divergence measures the amount of flux leaving at some point so if the divergence is negative, then the flux is converging instead of leaving. Curl as the name implies describes how particles at a point will rotate about the axis that points in the direction of the curl at the point. Notice the implicaton of the physical interpretation of divergence and curl. Divergence of a vector field measure a quantity which is a scalar value meanwhile curl describes how particles will behave and hence has both a direction and magnitude meaning the curl of a vector field is a vector.
+
+More formally, let U be an open subset of $\mathbb{R}^n$ and $\vec{F}: U\to \mathbb{R}^n be a vector field of class $C^1$, then:
+
+> **Div $\vec{F}$:** $\nabla \cdot F = \partial_1 F_1 + ... + \partial_n F_n$
+
+> **curl $\vec{F}$** = $\nabla \times \vec{F}$
+
+A trick to memorize the divergence and curl formula is to think the letter `d` from **d**ivergene as **d**ot product and the letter `c` from **c**url as **c**ross product. A neat trick I learned from a classmate and definitely helps remembering between the two. However, if you know the definition of divergence and curl, it should also be obvious as the dot product gives you a scalar value and a cross product gives you a vector. At the time I was taking the course, I did not know till I was writing about curl and diverge in this blog.
+
+What isn't surprisingly if that if the curl of a vector field is 0, it's called irrotational. Similarly, when the divergence is 0, it's called incompressible as the particles are neither convering or diverging from the point.
+
+It turns out that divergence and curl can be used to describe Green's Theorem:
+
+> **Curl version:** $\oint_C \vec{F}\cdot d\vec{r} = \int\int_D (curl \vec{F})\cdot \vec{k}dA$, $k$ is the unit bector in the z-direction
+
+> **Divergence version:** $\oint\vec{F}\cdot\vec{n}ds = \int\int_D div\vec{F}dA$
+
+Anyhow, as we are talking about surface integrals, let's talk about the analog for Green's Theorem for surface integrals:
+
+> **Divergence Theorem:** Let $R \subset \mathbb{R}^3$ be a regular region with piecewise smooth boundary $\partial R$ (where $\partial R$ given an outward orientation). If the vector field $\vec{F}: R\to \mathbb{R}^3$ is $C^1$, then:
+> $\int\int_{\partial R} \vec{F}\cdot \vec{n} dS = \int\int\int_R div\vec{F}dV = \int\int\int_R \vec{\nabla}\cdot F dV$
+
+Now we reach the conclusion of the course and talk about Stokes' Theorem. I did not know what Stokes Theorem was during the exam but let's see if I can redeem myself right now:
+
+> **Stokes' Theorem:** Let $S_o$ be a smooth surface with a piecewise smooth boundary $\partial S$ bounding $S\subseteq S_o$. Suppose $\vec{F}$ is a C' vector field on S then:
+> 
+> $\int_{\partial S} \vec{F}\cdot d\vec{x} = \int\int_S (\vec{\nabla} \times \vec{F})\cdot \vec{n} dS$
+
+I am not entirely sure how Stokes' Theorem works still but the definition states that we have an oriented surface $S_o$ that contains S and hence the boundary of S, $\partial S$ is contained inside $S_o$. The surface is oriented by some normal vector field $\vec{n}$. What is often told is that Stokes' Theorem is a generalization of Green's Theorem for higher dimensions and that both Green's Theorem and Divergence Theorem can be derived from Stokes' Theorem. Green's Theorem related a line integral to a double integral of a region so Stokes' can be used to relate a line integral to a surface integral. Using this fact, the existence of $\partial S$ and the curl, we can attempt to make some sense to what Stokes' Theorem is telling us. Recall the [meme about Green's Theorem](#meme) tells us that the swirls inside the surface is equal to the big swirl along the boundary. We can view the swirls as the curl. So $\int_{\partial S} \vec{F}\cdot d\vec{x}$ represents the big swirl along the boundary while $\int\int_S (\vec{\nabla} \times \vec{F})\cdot \vec{n} dS$ represents all the little swirls on the surface. Whether this is an accurate depiction of Stokes' Theorem is unknown to me. But that concludes the course description.
 
 ---
 
