fix broken image link

--- a/_posts/course-reviews/2022-01-01-math1152.md
+++ b/_posts/course-reviews/2022-01-01-math1152.md
@@ -80,9 +80,9 @@ algebra, this course not only requires students to solve matrices operating in d
 result in an equivalent system. This course is filled with mathematical proofs. Anything taught in this course is accompanied with a proof or at least 
 attempts to (sometimes the proof is left as an exercise or is too complex for the course).
 
-![Komi-san spewing linear algebra](https://pbs.twimg.com/media/DxscBpKXQAEqcd0?format=jpg&name=small)
+![Komi-san spewing linear algebra](../assets/images/math-physics/komi-linear.jpg)
 
-<div class = "caption">A random edited image I found when googling for an image for this blog post</div>
+<div class = "caption">A random edited image I found when googling for an image for this blog post. Original image was deleted unfortunately.</div>
 
 Throughout the course, you'll learn a lot of the materials in the course has a relation to the Non-singularity theorem. For instance, 
 if a square matrix is invertible, it is a non-singular matrix and this is equivalent to saying that the nullspace of a square matrix is the zero vector or that 
