Fix komi picture for linear algebra

--- a/_posts/course-reviews/2022-08-25-math2107.md
+++ b/_posts/course-reviews/2022-08-25-math2107.md
@@ -106,7 +106,7 @@ which is something I did not see before. A polynomial vector space is simply jus
 After this topic, students will go back to familiar territory talking about linear combinations and span. Although I am not familiar with what MATH1104 and MATH1107 cover but the next few topics should be 
 review such as the idea of <b>linear independence, basis, dimensions, colspace, rowspace, nullspace, and the rank-nullity theorem</b>. 
 
-![An edited image I found where Komi-san is babbling about vector spaces](https://pbs.twimg.com/media/DxscBpKXQAEqcd0?format=jpg&name=small)
+![An edited image I found where Komi-san is babbling about vector spaces](../assets/math-physics/manga/komi-linear.jpg) <!--(https://pbs.twimg.com/media/DxscBpKXQAEqcd0?format=jpg&name=small)-->
 <!--if image is deleted komi-linear.jpg-->
 
 The course then progress to talk about coordinate vectors and change of basis matrix. <b>Coordinate vectors</b> are essentially a way to represent uniquely a vector as a linear combination of vectors belonging to some basis 
