[blog] math1800 - fixed typo

--- a/_posts/course-reviews/2023-08-28-math1800.md
+++ b/_posts/course-reviews/2023-08-28-math1800.md
@@ -100,9 +100,9 @@ change the meaning of the original statement.
 
 The third section of the course covers proof techniques that are not recursive such as direct proofs and contrapositive. These two proof techniques along with contradiction are very important to know to survive most of the proofs covered in other Mathematics courses aside from statements that are recursive. A lot of problems in this section involves solving problems involves parity (i.e. even or odd) such as the statement: `If n is odd then 5n+9 is even`. It is fundamental to know the definition of even and odd to solve any types of problems that involves parity. 
 
-> **Even:** An integer $n$ is even if $exists k\in\mathbb{Z}$ such that $n = 2k$ which is to say that an integer $n$ is even if it's divisible by 2
+> **Even:** An integer $n$ is even if $\exists k\in\mathbb{Z}$ such that $n = 2k$ which is to say that an integer $n$ is even if it's divisible by 2
 
-> **Odd:** An integer $n$ is odd if $exists k\in\mathbb{Z}$ such that $ n= 2k + 1$ which is to say that an integer $n$ is odd if it's not divisible by 2
+> **Odd:** An integer $n$ is odd if $\exists k\in\mathbb{Z}$ such that $ n= 2k + 1$ which is to say that an integer $n$ is odd if it's not divisible by 2
 
 Direct proof as the name implies is straightforward technique whereby you assume the premise P(x) is true and try to show the statement Q(x) must also be true. Direct proof is the most simplest method to prove a statement but is not suitable for all types of problems. Hence why proof by contrapositive is taught. Often times, there are problems where it would be hard to prove in the forward direction but if we were to approach the problem in the other direction, it would be much simpler. Direct proofs are in the form of $P(x) \implies Q(x)$ but contrapositive approaches the problem $\neg Q(x) \implies \neg P(x)$. Essentially, contrapositive is another way of looking and approaching the same problem but in a different angle. Although tempting, you cannot approach the problem supposing $Q(x)$ and prove for $P(x)$ (i.e. $Q(x) \implies P(x)$). The statement might not remain true unless the problem is biconditional (i.e. $P(x)\iff Q(x)$). Having a good understanding of how direct, contradiction, and contrapositive proofs work is essential not only succeeding in MATH1800 but in your entire Mathematical Career as you will be required to know how to approach Mathematical proofs if you decide to go into Mathematics.
 
