[update] Note of Incompleteness of 3001 post

--- a/_posts/course-reviews/2024-01-14-math3001.md
+++ b/_posts/course-reviews/2024-01-14-math3001.md
@@ -8,6 +8,8 @@ categories: [university, school, math, reviews, carletonu]
 This is a course review of MATH3001 - Real Analysis 1 taken at CarletonU in 
 winter 2023. Real Analysis is a course that is known to have devastated undergraduate Math students for generations. The course is the sucessor of [MATH1052 - Calculus and Introductory Analysis 1](./math1052) and the beginning of [MATH2000 - Multivariable Calculus and Fundamentals of Analysis](./math2052). The interesting part about CarletonU is that students are exposed to elements of analysis in first year and second year which may not hold true for students in the United States. CarletonU also offers another course in Real Analysis which confuses me what would the equivalent. All I know is that the successor course will cover more on function and Hilbert spaces and an introduction to Measure Theory.
 
+**NOTE:** This blog post was accidentally released and is not complete. In particular, I only covered what was covered for a third of the course. As the review has been uploaded, I shall leave as is and slowly update the missing contents on a later date
+
 **TLDR:**
 * recall analysis concepts for 1052 such as continuity, uniform continuity, sequences, Bolzano Weierstrass, and etc
 * recall what an open ball is, what it means to be open, closed, an interior point or a boundary point from 2052
