[post] Splitting files

--- a/_posts/course-reviews/2024-01-14-math3001.md
+++ b/_posts/course-reviews/2024-01-14-math3001.md
@@ -330,7 +330,7 @@ This was surprising to me because it really seemed that the cantor set just cont
 
 ### Metric & Normed Spaces
 
-The existence of different ways to measure distances was an interesting concept. When I consider measuring the distance between two points in space, I almost never question what that really means because I have always been measuring distance on $\mathbb{R}^n$ where $1 \le n 3$ (i.e. 1D, 2D, 3D plane). Due to my narrow mind, it has never came to my attention that the manhatten distance used in the realm of CS can be used in analysis. Real Analysis has taught me that analysis can be intersected in many different fields.
+The existence of different ways to measure distances was an interesting concept. When I consider measuring the distance between two points in space, I almost never question what that really means because I have always been measuring distance on $\mathbb{R}^n$ where $1 \le n \le 3$ (i.e. 1D, 2D, 3D plane). Due to my narrow mind, it has never came to my attention that the manhatten distance used in the realm of CS can be used in analysis. Real Analysis has taught me that analysis can be intersected in many different fields.
 
 It turns out whether we noticed it or not that many concepts in analysis we have learned in university such as convergence, continuity, compactness, connectedness are dependent on the distance between points. For instance, in the definition of continuity on $\mathbb{R}^n$ states that a function f is continuous at $x_o$ if $\forall \epsilon > 0, \, \exists \delta > 0$ such that $\|x - x_o\| < \delta \implies \|f(x) - f(x_o)\| < \epsilon$. We have used $\|.\|$ to be the distance function between two points. But what properties is desirable in a distance function to be of any interest worth studying? Similarly to how we define a structure to a set using groups, in analysis we have a structure that formalizes the concept of distance in a set.
 
@@ -371,8 +371,42 @@ $$
 
 Essentially what the discrete metric does is say if two points are not the same, then they have a distance of 1. As the name implies, the distance is discrete but we can go further and say the values are binary in nature where it poses the question: "Are x and y two different values?". 
 
- 
+When working with vector spaces, we have learned that the distance between two vectors is called the norm. Depending on your background in Linear Algebra, 
+one will also know that there are a few ways to define the norm between two vectors which depends on the inner product. More specifically, 
+the norm is typicalled defined as the following:
 
+> **NORM (Using Inner Products):** For a vector space $V$ over some space, the norm is a function $\|\|\cdot\|\|: V \to [0, \infty)$ defined as $\|\|v\|\| = \sqrt{\langle v, v \rangle}$
+
+where $\langle v, v \rangle$ is defined to be an inner-product over the vector space $V$. However, in Real Analysis, we'll be introduced to various different norms that do not fit the 
+regular definition of norms we have come to know in Linear Algebra. A norm more abstractly is defined simply as a function that respects the following three norm properties:
+
+> **Norm Properties:** For $x\in V$(a vector space):
+> 1. $\|\|x\| = 0$ **iff** $x = \vec{0}$
+> 2. $\|\|\alpha x \|\| = \|\alpha\|\|\| x \|\| \quad \forall \alpha \in \mathbb{R}, \forall x \in V$
+> 3. $\|\|x + y\|\| \le \|\|x\|\| + \|\|y\|\| \quad \forall x, y \in V$
+> **Note:** \|\|\cdot\|\| \ge 0 \quad \forall x \in V
+
+Now that we know what a norm is, we can now talk about **NORMED LINEAR SPACES** (which I will refer as normed vector spaces).
+
+> **Normed Vector Space:** A pair $(V, \|\|\cdot\|\|)$ consisting a vector space V with a norm on V
+
+An interesting note that Carothers, the author of the textbook, states in respect to metrics on a vector space is that
+
+> Not all metrics on a vector space come from norms, however, so we cannot afford to be totally negligent 
+> - Carothers Real Analysis
+
+On the real line, the absolute function is one such norm. But for $\mathbb{R}^n$, we have a class of norms that we typically use in the course 
+called the $l^p$ norms or also referred as the p-norms:
+
+> $\|\|\cdot\|\| = (\displaystyle \sum_{i=1}^{n} \|\|x_i\|\|^p)^\frac{1}{p}$, where $x = (x_1, x_2, \ldots, x_n)\in \mathbb{R}^n, p\in [1, \infty)$
+>
+> **Manhatten Distance ($p = 1$):** $\|\|x\|\|\_1 = \displaystyle \sum_{i=1}^{n} \|x_i\|$
+>
+> **Euclidean Norm ($p = 2$):** $\|\|x\|\|\_2 = \displaystyle (\sum_{i=1}^n \|x_i\|^2)^\frac{1}{2}$
+>
+> **Sup Norm ($p = \infty$):** $\|\|(x, y)\|\|_\infty = max\\{\|x\|, \|y\|\\}$
+
+These p-norms induce a metric space
 
 ---
 
